[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/roboto_mono_36.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/roboto_mono_64.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/MainMenuScreen.gd" type="Script" id=3]
[ext_resource path="res://UI/menu_style.tres" type="StyleBox" id=4]

[node name="MainMenuScreen" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0022
margin_right = 1.0022
custom_styles/panel = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 592.0
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rows" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 964.0
margin_bottom = 542.0
custom_constants/separation = 80

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/Rows"]
margin_right = 924.0
margin_bottom = 86.0
custom_fonts/font = ExtResource( 2 )
text = "Defence Against Zombie"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/Rows"]
margin_top = 166.0
margin_right = 924.0
margin_bottom = 502.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/Rows/CenterContainer"]
margin_left = 302.0
margin_right = 622.0
margin_bottom = 336.0
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer"]
margin_right = 320.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 1 )
text = "SINGLE PLAYER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton3" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 320.0
margin_bottom = 148.0
custom_fonts/font = ExtResource( 1 )
text = "Difficult Mode"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton2" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer"]
margin_top = 188.0
margin_right = 320.0
margin_bottom = 242.0
custom_fonts/font = ExtResource( 1 )
text = "PK Mode"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer"]
margin_top = 282.0
margin_right = 320.0
margin_bottom = 336.0
custom_fonts/font = ExtResource( 1 )
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer/PlayButton3" to="." method="_on_PlayButton3_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer/PlayButton2" to="." method="_on_PlayButton2_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
